--- a/network.html
+++ b/network.html
@@ -19,6 +19,9 @@
 			background: linear-gradient(red, lightgreen);
 			border: 1px solid white;
 		}
+		#target {
+			width: 20em;
+		}
 		#interval {
 			width: 4em;
 		}
@@ -30,16 +33,15 @@
 		Your browser does not support the audio element used to keep the page active.
 	</audio>
 	<p>
-		<label for="target">Target IP: </label><input id="target" value="192.168.178.1">
-		<label for="interval">Interval ms: </label><input id="interval" value="50">
+		<label for="target">Target: </label><input id="target" value="http://192.168.178.122:8000/">
+		<label for="interval">Interval ms: </label><input id="interval" value="200">
 	</p>
 	<canvas id="canvas" width="1000" height="200">
-		Ping time to IP.
+		Ping time graph.
 	</canvas>
 	<script>
 		'use strict'
 		let ch, cw, ctx
-		const img = document.createElement('img')
 		let data = []
 		let next_ping = new Date()
 		function main(){
@@ -52,13 +54,36 @@
 			ping()
 		}
 
+		// CORB warning in console.
+		// 302, 200 in 125 ms in Chrome.
+		// 302, 200 in 1085 ms in Firefox!
 		function ping() {
-			let start_time = new Date()
+			const img = document.createElement('img')
+			const start_time = new Date()
 			img.onerror = () => {
 				update(new Date() - start_time)
 			}
 			img.src = window.target.value
 		}
+
+		// Times out!
+		// function ping() {
+		// 	const start_time = new Date()
+		// 	var socket = new WebSocket("ws://" + window.target.value)
+		// 	socket.onclose = function(event) {
+		// 		update(new Date() - start_time)
+		// 	}
+		// 	socket.onerror = socket.onopen = ()=>socket.close(1000)
+		// 	setTimeout(function(){ 
+		// 		if(socket != null) {
+		// 			console.log("timeout", socket)
+		// 			socket.close(1000)
+		// 			socket = null
+		// 		} else {
+		// 			console.log("socket already closed")
+		// 		}
+		// 	}, 200)
+		// }
 
 		function update(ms){
 			data = data.slice(1)
