--- a/network.html
+++ b/network.html
@@ -19,6 +19,9 @@
 			background: linear-gradient(red, lightgreen);
 			border: 1px solid white;
 		}
+		.nowrap {
+			white-space: nowrap;
+		}
 		#interval, #timeout {
 			width: 4em;
 		}
@@ -30,8 +33,8 @@
 <body>
 	<p>
 		<label for="target">Target: </label><input id="target" value="http://192.168.178.122:8000/">
-		<label for="interval">Interval ms: </label><input id="interval" value="200">
-		<span style="white-space:nowrap"><label for="timeout">Time-out ms: </label><input id="timeout" value="2000"></span>
+		<span class="nowrap"><label for="interval">Interval ms: </label><input id="interval" value="200"></span>
+		<span class="nowrap"><label for="timeout">Time-out ms: </label><input id="timeout" value="2000"></span>
 	</p>
 	<canvas id="canvas" width="500" height="200">
 		Ping time graph.
@@ -43,7 +46,8 @@
 		let data = []
 		let next_ping = new Date()
 		function init(){
-			canvas.width = window.innerWidth - 10
+			canvas.width = window.innerWidth - 20 // Account for scrollbars.
+			canvas.height = Math.max(20, window.innerHeight - canvas.getBoundingClientRect().y - 10)
 			ch = canvas.clientHeight
 			cw = canvas.clientWidth
 			data = data.slice(0, cw)
@@ -75,14 +79,15 @@
 		}
 
 		function update(ms){
-			data = data.slice(1)
-			data.push(ms)
+			data.pop()
+			data.unshift(ms)
 			ctx.clearRect(0, 0, cw, ch)
 			ctx.fillStyle = '#000'
 			let max = 0, min = Infinity, not_zero = 0, sum = 0
-			for(let i = 0; i < cw; ++i){
-				const ms = data[i]
-				ctx.fillRect(i, 0, 1, ch - ms)
+			for(let i = cw; i > 0; --i){
+				const ms = data[i - 1]
+				ctx.fillRect(cw - i, 0, 1, ch - ms)
+
 				if(data[i] > 0) {
 					not_zero += 1
 					if(ms < min) min = ms
