--- a/network.html
+++ b/network.html
@@ -31,6 +31,10 @@
 		#target {
 			width: 20em;
 		}
+		#woke {
+			height: 1px;
+			width: 1px;
+		}
 	</style>
 </head>
 <body>
@@ -40,6 +44,10 @@
 		<span class="nowrap"><label for="interval">Interval ms: </label><input id="interval" value="200"></span>
 		<span class="nowrap"><label for="timeout">Time-out ms: </label><input id="timeout" value="200"></span>
 	</p>
+	<video autoplay loop id="woke">
+		<source src="tournament/silent.ogx" type="audio/ogg">
+		Your browser does not support the video element used to keep the page active.
+	</video>
 	<canvas id="canvas" width="500" height="200">
 		Ping time graph.
 	</canvas>
