Not 23F5, not 25B6... Just try all matches from https://unicodeplus.com/search?q=triangle

--- a/network.html
+++ b/network.html
@@ -53,8 +53,8 @@
 	</canvas>
 	<script>
 		'use strict'
-		const PAUSE = '\u23f8\uFE0E'
-		const PLAY = '\u23f5\uFE0E'
+		const PAUSE = '\u23F8\uFE0E'
+		const PLAY = '\u25B6\uFE0E\u25B7\uFE0E\u25B8\uFE0E\u25B9\uFE0E\u29d0\uFE0E\u2BC8\uFE0E\u{1F782}\uFE0E\u{1F892}\uFE0E'
 
 		const canvas = document.getElementById('canvas')
 		let ch, cw, ctx
