--- a/network.html
+++ b/network.html
@@ -51,8 +51,7 @@
 	<script>
 		'use strict'
 		const PAUSE = '\u23F8\uFE0E'
-		const PLAY = '\u25B6\uFE0E\u25B7\uFE0E\u25B8\uFE0E\u25B9\uFE0E\u29d0\uFE0E\u2BC8\uFE0E\u{1F782}\uFE0E\u{1F892}\uFE0E'
-		play.value = PLAY
+		const PLAY = '\u25B6\uFE0E'
 		const canvas = document.getElementById('canvas')
 		let ch, cw, ctx
 		let data = []
