--- a/autocue.html
+++ b/autocue.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,18 +7,18 @@
 	<link rel="icon"
 		href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 112 100%22><text y=%22.9em%22 font-size=%2290%22>🎥</text></svg>">
 </head>
-
 <body>
-<button onclick="toggle_cue(true)" title="Click to toggle">Autocue/teleprompt</button>
-<label for="ac-slowness">Frame time </label><input id="ac-slowness" type="number" style="width:70px" value="30"> ms.
-<label for="ac-scrollstep">Scroll step </label><input id="ac-scrollstep" type="number" style="width:60px" value="1"> px.
-<label for="ac-padding">Padding </label><input id="ac-padding" style="width:70px" value="2in 4in" onchange="set_style()">
-<label for="ac-font">Font </label><input id="ac-font" value="0.5in Georgia, serif" onchange="set_style()">
-<label for="ac-transform">Transform </label><input id="ac-transform" style="width:90px" value="scale(-1, 1)" onchange="set_style()"
-	title="scale(-1, 1) to mirror">
-<label for="autocue-content">Text </label>(from <a href="https://www.youtube.com/watch?v=YeRu4xYH_W0">here</a>): <br>
-<div id="autocue" onclick="toggle_cue(false)">
-	<textarea id="autocue-content">
+<div>
+	<button id="acbutton" onclick="toggle_cue(true)" title="Click to toggle">Autocue/teleprompt</button>
+	<label for="ac-slowness">Frame time </label><input id="ac-slowness" type="number" style="width:70px" value="30"> ms.
+	<label for="ac-scrollstep">Scroll step </label><input id="ac-scrollstep" type="number" style="width:60px" value="1"> px.
+	<label for="ac-padding">Padding </label><input id="ac-padding" style="width:70px" value="2in 4in" onchange="set_style()">
+	<label for="ac-font">Font </label><input id="ac-font" value="0.5in Georgia, serif" onchange="set_style()">
+	<label for="ac-transform">Transform </label><input id="ac-transform" style="width:90px" value="scale(-1, 1)" onchange="set_style()"
+		title="scale(-1, 1) to mirror">
+	<label for="autocue-content">Text </label>(from <a href="https://www.youtube.com/watch?v=YeRu4xYH_W0">here</a>): <br>
+</div>
+<textarea id="actext" class="styled-scrollbars" onclick="toggle_cue(false)">
 
 
 
@@ -34,14 +33,17 @@ I personally don’t find that to be all that difficult, but it is significantly
 Of course, the key here is that the camera is looking through this piece of glass at me, your charming host.
 This means that when I’m looking at the words,
 I’m pretty much looking right at the camera lens.
-	</textarea>
-</div>
+
+
+
+
+
+</textarea>
 <script>
 	var duration = 20
 	var scroller = null
-	function getel(id) { return document.getElementById(id) }
-	var ac = getel('autocue')
-	var acc = getel('autocue-content')
+	const getel = id => document.getElementById(id)
+	const acc = getel('actext')
 
 	function set_style() {
 		acc.style.font = getel('ac-font').value
@@ -51,32 +53,57 @@ I’m pretty much looking right at the camera lens.
 	set_style()
 
 	function toggle_cue(on) {
-		ac.className = on ? 'autocue' : ''
+		acbutton.disabled  = on
+		getel('actext').classList.toggle('full', on)
 		var scrollstep = parseInt(getel('ac-scrollstep').value)
 		if (on) scroller = setInterval(() => acc.scrollTop += scrollstep, getel('ac-slowness').value)
 		else clearInterval(scroller)
 	}
 </script>
 <style>
-	#autocue,
-	#autocue-content {
-		min-width: fit-content;
-		width: -moz-available;
-		width: -webkit-fill-available;
-		width: available;
-		height: 100%;
+	a, html {
+		--fgcolor: white;
+		--bgcolor: rgb(40,40,40);
+		background-color: var(--bgcolor);
+		color: var(--fgcolor);
+	}
+	body {
+		margin: 0;
+	}
+	#actext {
 		color: white;
 		background-color: black;
-		border: 0;
+		border: 2px solid red;
+		resize: none;
 	}
 
-	.autocue {
+	.full {
 		position: fixed;
 		left: 0;
+		right: 0;
 		top: 0;
+		bottom: 0;
 		z-index: 9000;
+	}
+
+	.styled-scrollbars {
+		overflow: auto;
+		scrollbar-color: var(--fgcolor) transparent;
+		scrollbar-width: thin;
+	}
+	.styled-scrollbars::-webkit-scrollbar {
+		width: 10px;
+		height: 10px;
+	}
+	.styled-scrollbars::-webkit-scrollbar-thumb, .styled-scrollbars::-webkit-scrollbar-corner {
+		background-color: var(--bgcolor);
+		border: 1px outset;
+		border-color: var(--fgcolor);
+		border-radius: 5px;
+	}
+	.styled-scrollbars::-webkit-scrollbar-thumb:hover {
+		border-width: 2px;
 	}
 </style>
 </body>
-
 </html>
